# ExactAPI

./: Cargo.toml  Dockerfile  Makefile  docker-compose.yml
client_library/: Cargo.toml
client_library/src/: account.rs  contact.rs  error.rs  lib.rs
exact_filter/: Cargo.toml
exact_filter/src/: lib.rs
exact_requests/: Cargo.toml
exact_requests/src/: error.rs  lib.rs
exact_requests/src/endpoints/: accounts.rs  contact.rs  me.rs  mod.rs
exactapi/: Cargo.toml
exactapi/src/: config.rs  error.rs  main.rs
exactapi/src/exact_api_conversion/: account.rs  contact.rs  mod.rs
exactapi/src/routes/: mod.rs
exactapi/src/routes/v1/: mod.rs
exactapi/src/routes/v1/account/: list.rs  mod.rs
exactapi/src/routes/v1/contact/: list.rs  mod.rs
proto/protos/entity/: account.proto  contact.proto
proto/protos/payload/v1/account/: list.proto
proto/protos/payload/v1/contact/: list.proto
proto/src/: lib.rs
