[package]
name = "exact_requests"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing = "0.1.37"
strum = "0.24.1"
strum_macros = "0.24.3"
thiserror = "1.0.38"

[dependencies.exact_filter]
path = "../exact_filter"

[dependencies.serde]
version = "1.0.152"
features = ["derive"]

[dependencies.reqwest]
version = "0.11.13"
default-features = false
features = ["rustls-tls", "json"]