[package]
name = "exactapi"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.2.1"
actix-cors = "0.6.4"
actix-multiresponse = "0.4.2"
tracing-actix-web = "0.7.1"
tracing = "0.1.37"
thiserror = "1.0.38"
prost = "0.11.5"
envy = "0.4.2"
strum = "0.24.1"
strum_macros = "0.24.3"

[dependencies.moka]
version = "0.9.6"
features = ["future"]

[dependencies.serde]
version = "1.0.152"
features = ["derive"]

[dependencies.reqwest]
version = "0.11.13"
default-features = false
features = ["json", "rustls-tls"]

[dependencies.mrauth]
git = "ssh://git@github.com/MrFriendly-B-V/mrauth"
package = "client_library"

[dependencies.exactauth]
git = "ssh://git@github.com/MrFriendly-B-V/exactauth"
package = "client_library"

[dependencies.exact_requests]
path = "../exact_requests"

[dependencies.proto]
path = "../proto"

[dependencies.exact_filter]
path = "../exact_filter"

[dependencies.tracing-subscriber]
version = "0.3.16"
features = ["env-filter"]

[dependencies.noiseless-tracing-actix-web]
git = "ssh://git@github.com/MrFriendly-B-V/noiseless-tracing-actix-web.git"